// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependency.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

export default 123;

=====================================output=====================================
// @flow

export default 123;

================================================================================
`;

exports[`focused.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import val from "./dependency.js"

var x: string = val;

=====================================output=====================================
// @flow

import val from "./dependency.js";

var x: string = val;

================================================================================
`;
